bugfix: sorting by username insensitive in extra bets others list